--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,7 @@
   --light: #f8f9fa;
   --dark: #343a40;
   --black: #000000;
+  --yellow-poster: #E7D62B;
   --breakpoint-xs: 0;
   --breakpoint-sm: 576px;
   --breakpoint-md: 768px;
@@ -10320,26 +10321,26 @@ body {
 }
 .contact-section .card hr {
   border-color: #64a19d;
-  border-width: 0.25rem;
-  width: 3rem;
+  border-width: 0.5rem;
+  width: 5rem;
 }
 .contact-section .social {
   margin-top: 5rem;
 }
 .contact-section .social a {
   text-align: center;
-  height: 3rem;
-  width: 3rem;
+  height: 5rem;
+  width: 5rem;
   background: rgba(255, 255, 255, 0.1);
   border-radius: 100%;
   line-height: 3rem;
-  color: rgba(255, 255, 255, 0.3);
+  color: rgba(0, 0, 0, 0.8);
 }
 .contact-section .social a:hover {
-  color: rgba(255, 255, 255, 0.5);
+  color: rgba(231, 214, 43, 1);
 }
 .contact-section .social a:active {
-  color: #fff;
+  color: #e7d62b;
 }
 
 .footer {
