--- a/css/styles.css
+++ b/css/styles.css
@@ -10259,7 +10259,7 @@ body {
   .masthead {
     height: 100vh;
     padding: 0;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.7) 100%, #000000 100%), url("../assets/img/fbcoverdesktop.png");
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.7) 100%, #000000 100%), url("../assets/img/FBcover.png");
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: scroll;
