--- a/css/styles.css
+++ b/css/styles.css
@@ -10229,7 +10229,7 @@ body {
   height: auto;
   min-height: 35rem;
   padding: 15rem 0;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.7) 100%, #000000 100%), url("../assets/img/poster.png");
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.7) 100%, #000000 100%), url("../assets/img/mobilegraphic.png");
   background-position: center, bottom;
   background-repeat: no-repeat, no-repeat;
   background-attachment: scroll, scroll;
