--- a/css/styles.css
+++ b/css/styles.css
@@ -10227,13 +10227,13 @@ body {
   position: relative;
   width: 100%;
   height: auto;
-  min-height: 35rem;
-  padding: 15rem 0;
+  min-height: 0rem;
+  padding: 10rem 0;
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.7) 100%, #000000 100%), url("../assets/img/mobilegraphic.png");
-  background-position: center, bottom;
+  background-position: center;
   background-repeat: no-repeat, no-repeat;
   background-attachment: scroll, scroll;
-  background-size: cover, 99%, 99%;
+  background-size: cover, 125%, 125%;
 }
 .masthead h1 {
   font-family: "Varela Round", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
